--- a/.dbeaver/credentials-config.json
+++ b/.dbeaver/credentials-config.json
@@ -1,1 +1,2 @@
-sbHrí¡ÂD!˜<¡îìWÂ±?Obõ))X6èÊÔ˜“sn”ô¹[?¹Ê­†º_zñÍù0‘Hµ®w_$5‹[Ç£cèN$z|áÍ³6ö²0¯µòF/† g~q!ýcp“ò¬P“‡¹Òsm$:¶•ÀKH7²b ¦QÂ
+SG2‚8.–‹¯ü%hòÈŽ½|)×ŠÿÉ¼|êëd”J
+L®¨ »¢™Ö|ø¿~éš÷m÷)3ñGÀ“DZHEÌ™†…7œN9p'ù1H‚˜þÌ3péÜ„?x$*J¿ï­zbœ­ò,PDê1¤¢8{°‚\Î§6EÍä€
