Feat: Implement Electron data persistence and fix script loading - js/filemgmt.js: Fixed Electron path resolution for app-data.json. - main.js: Enabled nodeIntegration and disabled contextIsolation for renderer process. Added standard macOS window closing behavior. - js/global-app.js: Centralized loading of global scripts like filemgmt, data-startup, and navbar. - pages/accounts.html: Corrected script loading order. - js/accounts.js: Refactored initialization and event handling to be dependent on data loading, ensuring stability. - js/data-startup.js: Added debug logging to trace data loading flow.

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -1,5 +1,14 @@
 {
-  "accounts": [],
+  "accounts": [
+    {
+      "name": "1",
+      "balance": 1,
+      "interest": 2,
+      "interest_period": "month",
+      "compound_period": "month",
+      "interest_type": "compound"
+    }
+  ],
   "transactions": [],
   "forecast": [],
   "budget": []
