feat: Implement inline editing for accounts grid
Changed files:
- assets/app-data.json: Added current_balance to account objects.
- js/accounts.js: Refactored for inline editing, quick-add, and balance recalculation.
- pages/accounts.html: Removed old form and updated table for new UI.
- styles/app.css: Added styles for icon buttons and editable cells.

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -3,18 +3,20 @@
     {
       "name": "Transactional",
       "balance": 10000,
+      "current_balance": 10000,
       "interest": 2,
       "interest_period": "year",
       "compound_period": "month",
       "interest_type": "compound"
     },
     {
-      "name": "credit",
-      "balance": 10000,
-      "interest": 7.25,
-      "interest_period": "month",
-      "interest_type": "compound",
-      "compound_period": "day"
+      "name": "Credit",
+      "balance": 100,
+      "current_balance": 100,
+      "interest": 2,
+      "interest_period": "year",
+      "compound_period": "month",
+      "interest_type": "compound"
     }
   ],
   "transactions": [],
