feat: Complete transactions page refactor with editable grid - js/editable-grid.js: Created new reusable module for editable grids. - js/accounts.js: Refactored to use the new EditableGrid module. - assets/app-data.json: Updated data model for accounts and transactions. - partials/transactions.html: Created new HTML structure for the transactions page. - js/transactions.js: Implemented the new transactions page with dynamic, editable grid.

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -7,7 +7,9 @@
       "interest": 2,
       "interest_period": "year",
       "compound_period": "month",
-      "interest_type": "compound"
+      "interest_type": "compound",
+      "group": "Asset",
+      "tags": ["primary"]
     },
     {
       "name": "Credit",
@@ -16,10 +18,43 @@
       "interest": 2,
       "interest_period": "year",
       "compound_period": "month",
-      "interest_type": "compound"
+      "interest_type": "compound",
+      "group": "Liability",
+      "tags": ["credit card"]
     }
   ],
-  "transactions": [],
+  "transactions": [
+    {
+      "description": "Salary",
+      "amount": 5000,
+      "account": "Transactional",
+      "isRecurring": true,
+      "recurrence": {
+        "frequency": "monthly",
+        "endDate": "2030-12-31",
+        "dayOfMonth": 15
+      },
+      "amountChange": null,
+      "tags": ["income"]
+    },
+    {
+      "description": "Rent",
+      "amount": -2000,
+      "account": "Transactional",
+      "isRecurring": true,
+      "recurrence": {
+        "frequency": "monthly",
+        "endDate": "2030-12-31",
+        "dayOfMonth": 1
+      },
+      "amountChange": {
+        "type": "percentage",
+        "value": 2,
+        "frequency": "yearly"
+      },
+      "tags": ["housing", "rent"]
+    }
+  ],
   "forecast": [],
   "budget": []
 }
