Update documentation for grid refactor and disk persistence
Changed files:
- documentation/editable-grid.md: document callback-driven save, disk persistence, spinners, logging, exclusive use
- Documentation/filemgmt.md: clarify Electron/Node.js disk persistence, remove localStorage
- Documentation/accounts.md: update for exclusive EditableGrid use, immediate disk persistence
- Documentation/transactions.md: update for exclusive EditableGrid use, immediate disk persistence
- Documentation/transactions initial notes.md: add update note confirming implementation

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -25,6 +25,10 @@
       "tags": [
         "credit card"
       ]
+    },
+    {
+      "name": "",
+      "balance": 0
     }
   ],
   "transactions": [
