Fix duplicate row insertion on add
Changed files:
- js/transactions.js: Remove redundant push in onSave handler, only update for edits. New rows are now only inserted by EditableGrid, preventing double insertion.

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -48,24 +48,19 @@
       ]
     },
     {
-      "description": "Rent",
-      "amount": -2000,
+      "description": "update",
+      "amount": 0,
       "account": "Transactional",
       "isRecurring": true,
-      "recurrence": {
-        "frequency": "monthly",
-        "endDate": "2030-12-31",
-        "dayOfMonth": 1
-      },
-      "amountChange": {
-        "type": "percentage",
-        "value": 2,
-        "frequency": "yearly"
-      },
-      "tags": [
-        "housing",
-        "rent"
-      ]
+      "tags": ""
+    },
+    {
+      "description": "new",
+      "amount": 0,
+      "account": "",
+      "isRecurring": false,
+      "executionDate": "",
+      "tags": ""
     }
   ],
   "forecastResults": [],
