Add global keyboard shortcut system and documentation
Changed files:
- Documentation/keyboard-shortcuts.md: new doc for shortcut system
- Documentation/PROJECT_OVERVIEW.md: add section and diagram for shortcut config
- js/config.js: config loader and shortcut utilities
- js/editable-grid.js: grid integration with config-based shortcuts
- assets/shortcuts.json: initial keymap config

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -12,11 +12,13 @@
     },
     {
       "name": "Bernice Transactional",
-      "balance": 0
+      "balance": 0,
+      "current_balance": 0
     },
     {
       "name": "Bernice Credit Card",
-      "balance": 0
+      "balance": 0,
+      "current_balance": 0
     }
   ],
   "transactions": [
