Refactor for double-entry accounting
Changed files:
- assets/app-data.json: update accounts with type, transactions with dual-account and debit/credit
- js/accounts.js: add type field to account grid
- js/transactions.js: dual-account, debit/credit, validation logic
- js/forecast.js: update forecast logic for debit/credit
- Documentation/PROJECT_OVERVIEW.md: new schema diagrams, migration notes
- Archive/plan-dual-account-debit-credit.md: implementation plan and instructions

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -3,29 +3,34 @@
     {
       "name": "Jeanre Credit Card",
       "balance": 0,
-      "current_balance": 0
+      "current_balance": 0,
+      "type": "liability"
     },
     {
       "name": "Jeanre Transactional",
       "balance": 0,
-      "current_balance": 0
+      "current_balance": 0,
+      "type": "asset"
     },
     {
       "name": "Bernice Transactional",
       "balance": 0,
-      "current_balance": 0
+      "current_balance": 0,
+      "type": "asset"
     },
     {
       "name": "Bernice Credit Card",
       "balance": 0,
-      "current_balance": 0
+      "current_balance": 0,
+      "type": "liability"
     }
   ],
   "transactions": [
     {
-      "description": "Salary",
-      "amount": 5000,
-      "account": "Transactional",
+      "account_primary": "Jeanre Transactional",
+      "account_secondary": "Jeanre Credit Card",
+      "debit": 5000,
+      "credit": 0,
       "isRecurring": true,
       "recurrence": {
         "frequency": "monthly",
