--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -12,8 +12,8 @@
       "balance_as_of": "2025-07-17",
       "date_created": "2025-07-17",
       "interest": {
-        "presetOption": "Custom",
-        "nominalRate": 0,
+        "presetOption": "NACM (Compounded Monthly)",
+        "nominalRate": 6,
         "effectiveRate": 0,
         "nominalRatePeriod": "Annually",
         "calculationMethod": "Compound",
