Fix presetOption dropdown persistence in interestModal
Changed files:
- assets/accounts-grid.json: Updated fieldDefaults to include presetOption for each standard option, ensuring dropdown selection persists and does not revert.

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -68,9 +68,9 @@
         "presetOption": "NACQ (Compounded Quarterly)",
         "nominalRate": 1,
         "effectiveRate": 0,
-        "nominalRatePeriod": "Annually",
+        "nominalRatePeriod": "Monthly",
         "calculationMethod": "Compound",
-        "compoundingInterval": "Monthly"
+        "compoundingInterval": "Quarterly"
       }
     }
   ],
