Update Electron launch config and grid/modal logic
Changed files:
- .vscode/launch.json: fixed remote-debugging-port flag for Electron renderer
- js/modal.js: manual edits for modal logic
- js/editable-grid.js: manual edits for grid logic and comments
- assets/app-data.json: manual edits to app data

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -56,21 +56,21 @@
     },
     {
       "id": 4,
-      "name": "Bernice Credit Card",
-      "type": "liability",
-      "currency": "JPY",
+      "name": "Bernice Credit Cardf",
+      "type": "income",
+      "currency": "ZAR",
       "start_amount": 0,
       "balance": 0,
       "current_balance": 0,
       "balance_as_of": "2025-07-17",
       "date_created": "2025-07-17",
       "interest": {
-        "presetOption": "NACQ (Compounded Quarterly)",
+        "presetOption": "NACD (Compounded Daily)",
         "nominalRate": 1,
         "effectiveRate": 0,
-        "nominalRatePeriod": "Monthly",
+        "nominalRatePeriod": "Annually",
         "calculationMethod": "Compound",
-        "compoundingInterval": "Quarterly"
+        "compoundingInterval": "Annually"
       }
     }
   ],
