--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "dev": "electron . --inspect=9229 --remote-debugging-port=9222",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
