basic save in place
Changed files:
- js/accounts.js: implemented basic onSave function for accounts, saving only the received data to disk

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -19,6 +19,15 @@
         "calculationMethod": "Simple",
         "compoundingInterval": "Annually"
       }
+    },
+    {
+      "id": "",
+      "name": "",
+      "type": "asset",
+      "currency": "ZAR",
+      "balance": "",
+      "current_balance": "",
+      "interest": ""
     }
   ],
   "transactions": [
