add new row working
Changed files:
- js/editable-grid.js: fixed add row logic and id assignment, ensured correct data flow for new rows

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -18,6 +18,15 @@
       "balance": 1234,
       "current_balance": 0,
       "interest": ""
+    },
+    {
+      "id": 3,
+      "name": "re",
+      "type": "Asset",
+      "currency": "ZAR",
+      "balance": 0,
+      "current_balance": 0,
+      "interest": ""
     }
   ],
   "transactions": [
