basic tag input complete. transaction save not working.

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -96,7 +96,7 @@
       "isRecurring": false,
       "recurrence": [],
       "amountChange": [],
-      "tags": []
+      "tags": "my×name×is×norma×the×spider×gagger×"
     },
     {
       "id": 2,
